[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Main.gd" type="Script" id=2]
[ext_resource path="res://scene/Mob.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1.41589, 597.964, 0, 0, 0, 0, 5.91719, 7.02322, 0, 0, 0, 0, 1022.31, 3.77386, 0, 0, 0, 0, 1021.08, 595.544, 0, 0, 0, 0, 1.41589, 597.964 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Node2D" parent="."]
position = Vector2( 240, 450 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnFinder" type="PathFollow2D" parent="MobPath"]
position = Vector2( 1.41589, 597.964 )
rotation = -1.56318
